# spreadara

./: .gitignore  CMakeLists.txt  LICENSE  README.md  backtest_results.csv  calibration_top10.csv
benchmarks/: bench_tick_processor.cpp
config/: config.toml
dashboard/: .env.development  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.css  App.tsx  WsStateContext.tsx  api.ts  auth.ts  index.css  main.tsx
dashboard/src/components/: CircuitBreakerPanel.tsx  EventsFeed.tsx  FillRatePanel.tsx  InventoryPanel.tsx  LatencyPanel.tsx  Layout.tsx  MetricCard.tsx  Pill.tsx  PnlPanel.tsx  ProgressBar.tsx  QuoteBar.tsx  QuotePanel.tsx  Sidebar.tsx  Topbar.tsx  TradesTable.tsx  freshness.tsx
dashboard/src/pages/: .tsx  AcceptInvite.tsx  AdminUsers.tsx  Alerts.tsx  Backtest.tsx  Calibration.tsx  Config.tsx  Dashboard.tsx  FeeAnalysis.tsx  FundingRate.tsx  InventoryHistory.tsx  Login.tsx  Logs.tsx  MarketData.tsx  Orders.tsx  Placeholder.tsx  PnL.tsx  Positions.tsx  Risk.tsx  SessionHistory.tsx  SpreadAnalysis.tsx  Strategy.tsx  System.tsx  Trades.tsx  fmt.ts
dashboard_backend/: alerts.go  auth.go  dial_test.go  email.go  go.mod  go.sum  main.go  server.go  server_test.go  users.go
data/historical/: BTCUSDT-bookTicker-2026-01-01.csv
deploy/: spreadara-dashboard.service  spreadara-deploy.sh  spreadara-trading.service
src/: main.cpp
src/backtest/: backtest_reporter.cpp  backtest_reporter.hpp  backtest_runner.cpp  backtest_runner.hpp  historical_data_loader.cpp  historical_data_loader.hpp  recorder.cpp  recorder.hpp  replay_engine.cpp  replay_engine.hpp
src/dashboard/: dashboard_server.cpp  dashboard_server.hpp
src/db/: pg_reporter.cpp  pg_reporter.hpp
src/execution/: credentials.cpp  fix_client.cpp  fix_client.hpp  i_rest_client.hpp  okx_rest_client.cpp  okx_rest_client.hpp  order_manager.cpp  order_manager.hpp  rest_client.cpp  rest_client.hpp  simulated_rest_client.cpp  simulated_rest_client.hpp
src/infra/: config.cpp  config.hpp  cpu_affinity.cpp  cpu_affinity.hpp  logger.cpp  logger.hpp  rdtsc.cpp  rdtsc.hpp
src/market_data/: binance_ws_client.cpp  binance_ws_client.hpp  depth_snapshot.cpp  market_event.hpp  okx_private_ws_client.cpp  okx_private_ws_client.hpp  okx_ws_client.cpp  okx_ws_client.hpp  orderbook.cpp  orderbook.hpp  tick_processor.cpp  tick_processor.hpp  volatility.hpp  ws_types.hpp
src/risk/: circuit_breaker.cpp  circuit_breaker.hpp  position_tracker.cpp  position_tracker.hpp  risk_manager.cpp  risk_manager.hpp
src/schemas/: fill_event.fbs  market_snapshot.fbs  quote_update.fbs  risk_event.fbs
src/strategy/: inventory_manager.cpp  inventory_manager.hpp  market_maker.cpp  market_maker.hpp  signal_aggregator.cpp  signal_aggregator.hpp  spread_model.cpp  spread_model.hpp
src/transport/: spsc_ring_buffer.hpp
tests/: test_backtest.cpp  test_execution.cpp  test_integration.cpp  test_orderbook.cpp  test_private_ws.cpp  test_reporter.cpp  test_risk.cpp  test_spsc.cpp  test_strategy.cpp
tools/: convert_binance_csv.cpp  download_historical.sh  okx_demo_flatten.sh  preflight_check.sh
